router now works between index and home routes (logout button added). Also, resolved issue with right dropdown being mis-aligned

--- a/src/app/avabar/avabar.component.scss
+++ b/src/app/avabar/avabar.component.scss
@@ -22,7 +22,8 @@ $avabar-black: lighten(black, 6%);
         height: 80%;
         margin: 8px 10%;
         @include forward-leaf();
-        @include box-shadow(2px, 2px, 0, white);
+        @include border(2px, solid, white);
+        // @include box-shadow(2px, 2px, 0, white); //trying it out
       }
     }
   }
